[Qt] Two canvas tests fail with QT_IMAGE_DECODER=0 setup https://bugs.webkit.org/show_bug.cgi?id=83764

The following tests were failed after r108792:
- canvas-toDataURL-case-insensitive-mimetype.html
- toDataURL-supportedTypes.html
because supportedImageMIMETypesForEncoding wasn't filled
with MIME types in case of QT_IMAGE_DECODER=0 build setup.

Patch by Zoltan Horvath <zoltan@webkit.org> on 2012-04-12
Reviewed by Csaba Osztrogonác.

Fixes existing tests.

* platform/MIMETypeRegistry.cpp:
(WebCore::initializeSupportedImageMIMETypesForEncoding):

Canonical link: https://commits.webkit.org/101255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113960 268f45cc-cd09-0410-ab3c-d52691b4dbfc